project(vtkSlicer${MODULE_NAME}ModuleLogic)

set(KIT ${PROJECT_NAME})

#---add TumorSegm lib---------------------------------------------------------
#add_library(TumorSegm STATIC IMPORTED)
#set_property(TARGET TumorSegm PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/TumorSegm.lib")

add_subdirectory(TumorSegm)

set(${KIT}_EXPORT_DIRECTIVE "VTK_SLICER_${MODULE_NAME_UPPER}_MODULE_LOGIC_EXPORT")

set(${KIT}_INCLUDE_DIRECTORIES
  ${CMAKE_CURRENT_SOURCE_DIR}/TumorSegm
  ${CMAKE_CURRENT_BINARY_DIR}/TumorSegm
  )

set(${KIT}_SRCS
  vtkSlicer${MODULE_NAME}Logic.cxx
  vtkSlicer${MODULE_NAME}Logic.h
  )

set(${KIT}_TARGET_LIBRARIES
  ${ITK_LIBRARIES}
  ${MRML_LIBRARIES}
  vtkSlicerMarkupsModuleMRML
  vtkSlicerAnnotationsModuleLogic
  TumorSegm
  vtkSlicerVolumesModuleLogic
  vtkSlicerCropVolumeModuleLogic
  )



#-----------------------------------------------------------------------------
SlicerMacroBuildModuleLogic(
  NAME ${KIT}

  EXPORT_DIRECTIVE ${${KIT}_EXPORT_DIRECTIVE}
  INCLUDE_DIRECTORIES ${${KIT}_INCLUDE_DIRECTORIES}
  SRCS ${${KIT}_SRCS}
  TARGET_LIBRARIES ${${KIT}_TARGET_LIBRARIES}
  )
